Improve stickers
Add margins around stickers.

Add a selection effect.

Add an easier way to organize them. Compatible with up to 3 digits prefix.

Load default stickers and add them to the installer.